cluster/apps/default/echoip/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echoip
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: echoip
---
apiVersion: v1
kind: Service
metadata:
  name: echoip-lab
  namespace: default
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.240
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: echoip
