cluster/apps/default/echoip/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoip
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
spec:
  tls:
    - secretName: i.${SECRET_DOMAIN}
      hosts:
        - i.${SECRET_DOMAIN}
  rules:
    - host: i.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              serviceName: echoip
              servicePort: 8080
